# nim65s.github.io

./: .gitlab-ci.yml  .known_hosts  .mergify.yml  .pnp.cjs  .pnp.loader.mjs  .pre-commit-config.yaml  Makefile  README.md  _config.yml  flake.nix  icons.js  my-slides.typ  package.json  pnpm-lock.yaml  pyproject.toml  style.css  tailwind.config.js  template.html
.github/workflows/: build.yml
media/: boissons.uml
pkgs/: homepage-css.nix  homepage-svgs.nix  homepage-venv.nix  homepage.nix  lock-hash.json  nim65s-talks.nix  talks-html.nix  talks-pdfs.nix
public/: .old-talks.json  index.html  style.css  talks.html
src/homepage/: __init__.py  talks_index.py  teach_index.py
talks/: 25-besoins.typ  25-gazebros2nix.typ  25-pkgs.typ  25-sops-clan.typ  25-uv-2rm.typ  25-uv-ia.typ  26-2rm.typ  26-rob.typ  26-rosconfr.typ
teach/: CMakeLists.txt
teach/2025-2026/5A_SRI/: 1-intro.typ  2-outils.typ  3-tests.typ  4-packaging.typ  5-uv.typ  tp-1.typ  tp-2.typ  tp-3.typ  tp-4.typ
teach/2025-2026/M2_ISTR/: 1-intro.typ  2-rappels.typ  3-outils.typ  4-git-addendum.typ  5-c++.typ  6-python-api.typ  tp-1.typ  tp-2.typ  tp-3.typ  tp-4.typ
