[project]
name = "homepage"
version = "1.0.0"
description = "Generate an index page for my talks"
readme = "README.md"
authors = [
    { name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.4",
]

[project.scripts]
talks-index = "homepage:talks_index"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
